--- a/src/styles/components/editorComponents/EditorToolbar.scss
+++ b/src/styles/components/editorComponents/EditorToolbar.scss
@@ -23,7 +23,6 @@
         display: block;
         flex-grow: 1;
       }
-
     }
   }
 
@@ -60,12 +59,10 @@
         height: 40px;
       }
 
-      @media (hover:hover) {
-
+      @media (hover: hover) {
         &:hover {
           color: $color-hovered;
         }
-
       }
     }
 
@@ -87,12 +84,10 @@
       }
     }
 
-    @media (hover:hover) {
-
+    @media (hover: hover) {
       &:hover::after {
         background-color: $color-additional-2;
       }
-
     }
 
     &:disabled svg {
@@ -102,7 +97,6 @@
     &:disabled::after {
       background-color: $color-hovered;
     }
-
   }
 
   & .editor-toolbar__prettify-button {
@@ -110,13 +104,18 @@
     color: white;
     transition: 0.3s;
 
-    @media (hover:hover) {
-
+    @media (hover: hover) {
       &:hover {
         background-color: $color-hovered;
         color: $color-additional-2;
       }
+    }
 
+    @media (hover: none) {
+      &:hover {
+        color: $color-additional-2;
+        background-color: $color-hovered;
+      }
     }
 
     @media (max-width: 980px) {
@@ -145,7 +144,6 @@
     min-width: auto;
     width: 100%;
   }
-
 }
 
 .editor-toolbar__input::placeholder {
